# files_agent

./: Cargo.toml
src/: main.rs
src/agent/: mod.rs  rule_applier.rs  state.rs
src/config/: agent_config.rs  config.rs  mod.rs
src/detection/: mod.rs  ransomware.rs
src/enforcer/: acl.rs  backup.rs  damage_tracker.rs  exclusions.rs  folder_lock.rs  mod.rs  path_type.rs  proactive.rs  restore.rs  soft_block.rs  unlock.rs
src/features/: feature_flags.rs  mod.rs
src/models/: alert.rs  fs_event.rs  mod.rs
src/monitor/: event_mapper.rs  fs_watcher.rs  mod.rs
src/platform/windows/: drives.rs  mod.rs
src/rules/: action.rs  matcher.rs  mod.rs  operation.rs  rule.rs
src/sync/: mod.rs  rule_sync.rs
src/transport/: sender.rs
