[package]
name = "dlpfiles"
version = "0.1.0"
edition = "2021"

[dependencies]
notify = "6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
chrono = "0.4.42"
lazy_static = "1.5.0"

windows = { version = "0.54", features = ["Win32_Storage_FileSystem"] }
once_cell = "1.21.3"
ctrlc = "3.5.1"

